--- a/miner.html
+++ b/miner.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Adchain Miner - Auth</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="/static/miner.css" />
+  <link rel="stylesheet" href="miner.css" />
 </head>
 <body>
   <div id="login-page">
@@ -227,6 +227,6 @@
       </div>
     </footer>
   </div>
-  <script src="static/miner.js"></script>
+  <script src="miner.js"></script>
 </body>
 </html>
